BANG-1351: Display the grants associated with a rule.
